<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backbackground2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@color/black"
        android:layout_gravity="end"
        android:layout_marginStart="8dp"
        android:ellipsize="start"
        android:singleLine="true"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:layout_gravity="end"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="30sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvClear"
                style="@style/NumberActionButton2"
                android:text="@string/Clear"/>

            <TextView
                android:id="@+id/tvPercent"
                style="@style/NumberActionButton2"
                android:text="@string/Percent"/>

            <TextView
                android:id="@+id/tvSquare"
                style="@style/NumberActionButton2"
                android:text="@string/SquareRoot"/>

            <TextView
                android:id="@+id/tvDivide"
                style="@style/NumberActionButton2"
                android:text="@string/Divide"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSeven"
                style="@style/NumberButtonStyle"
                android:text="@string/_7"/>

            <TextView
                android:id="@+id/tvEight"
                style="@style/NumberButtonStyle"
                android:text="@string/_8"/>

            <TextView
                android:id="@+id/tvNine"
                style="@style/NumberButtonStyle"
                android:text="@string/_9"/>

            <TextView
                android:id="@+id/tvMul"
                style="@style/NumberActionButton2"
                android:text="@string/Multiply"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFour"
                style="@style/NumberButtonStyle"
                android:text="@string/_4"/>

            <TextView
                android:id="@+id/tvFive"
                style="@style/NumberButtonStyle"
                android:text="@string/_5"/>

            <TextView
                android:id="@+id/tvSix"
                style="@style/NumberButtonStyle"
                android:text="@string/_6"/>

            <TextView
                android:id="@+id/tvMinus"
                style="@style/NumberActionButton2"
                android:text="@string/Minus"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOne"
                style="@style/NumberButtonStyle"
                android:text="@string/_1"/>

            <TextView
                android:id="@+id/tvTwo"
                style="@style/NumberButtonStyle"
                android:text="@string/_2"/>

            <TextView
                android:id="@+id/tvThree"
                style="@style/NumberButtonStyle"
                android:text="@string/_3"/>

            <TextView
                android:id="@+id/tvPlus"
                style="@style/NumberActionButton2"
                android:text="@string/Plus"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDot"
                style="@style/NumberButtonStyle"
                android:text="@string/Dot"/>

            <TextView
                android:id="@+id/tvZero"
                style="@style/NumberButtonStyle"
                android:text="@string/_0"/>

            <TextView
                android:id="@+id/tvBack"
                style="@style/NumberButtonStyle"
                android:text="@string/del"/>

            <TextView
                android:id="@+id/tvEquals"
                style="@style/NumberActionButton2"
                android:text="@string/Equal"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>